# fast_fsm

./: .gitignore  AGENTS.md  CHANGELOG.md  DOCUMENTATION_INDEX.md  PROJECT_CONTEXT.md  QUICK_START.md  README.md  SAFETY_SUMMARY.md  TESTING.md  TUTORIAL.md  Taskfile.yml  USABILITY_IMPROVEMENTS.md  VALIDATION_IMPROVEMENTS.md  delete_empty_files.sh  my_fsm_validator.py  pyproject.toml  pytest.ini  setup.py  test_args_support.py  test_async_examples.py  test_cross_fsm_dependencies.py  test_enhanced_validation.py  test_fsm_linking_techniques.py  test_safety_improvements.py  test_usability_improvements.py
.beads/: dolt-server.activity  metadata.json
.github/: copilot-instructions.md  gsd-file-manifest.json
.github/workflows/: ci.yml  docs.yml  release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  TEST-AUDIT.md  v0.2.1-MILESTONE-AUDIT.md  v0.2.2-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v0.2.1-REQUIREMENTS.md  v0.2.1-ROADMAP.md  v0.2.2-MILESTONE-AUDIT.md  v0.2.2-REQUIREMENTS.md  v0.2.3-MILESTONE-AUDIT.md  v0.2.3-REQUIREMENTS.md  v0.2.3-ROADMAP.md
.planning/phases/01-quick-wins/: 01-CONTEXT.md  (+1 more)
.specify/decisions/: ADR-001-sparse-dense-scoring.md  ADR-002-trigger-result-not-exception.md  ADR-003-mypyc-compilation-boundary.md
.specify/memory/: constitution.md  spr-core-api.md  spr-index.md  spr-validation.md  spr-visualization.md
.specify/templates/: adr-template.md  spr-template.md
benchmarks/: benchmark.py  benchmark_fast_fsm.py  benchmark_my_fsm.py  benchmark_py_fsm.py  benchmark_transitions_fsm.py  performance_demo.py
docs/: FSM_LINKING_TECHNIQUES.md  QUICK_START.md  TUTORIAL.md  conf.py  index.rst  make.bat
docs/api/: conditions.md  core.md  validation.md  visualization.md
docs/dev/: architecture.md  contributing.md  testing.md
docs/examples/: index.md
examples/: async_sensor_example.py  cross_fsm_demo.py  declarative_state_example.py  enhanced_builder_example.py  order_processing.py  traffic_light.py
src/fast_fsm/: __init__.py  condition_templates.py  conditions.py  core.py  validation.py  visualization.py
tests/: test_advanced_functionality.py  test_async.py  test_basic_functionality.py  test_boundary_negative.py  test_builder.py  test_condition_templates.py  test_hypothesis.py  test_listeners.py  test_logging_config.py  test_mypyc_guard.py  test_performance_benchmarks.py  test_readme_examples.py  test_safety_kwargs.py  test_state_machine_utils.py  test_validation.py  test_visualization.py
(+25 files in other folders)
