[project]
name = "fast_fsm"
version = "0.2.0"
description = "High-performance, memory-efficient finite state machine library for Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mypy-extensions>=1.0",
]

[dependency-groups]
dev = [
    "hypothesis>=6.136.6",
    "mypy[mypyc]>=1.11.2",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.11",
    "ty>=0.0.1a19",
]
benchmarks = [
    "matplotlib>=3.10.3",
    "networkx>=3.2",
    "python-statemachine>=2.5.0",
    "transitions>=0.9.3",
]
docs = [
    "sphinx>=8.0",
    "sphinx-autodoc-typehints>=2.0",
    "myst-parser>=4.0",
    "furo>=2024.1",
]

[tool.uv]
package = true

[build-system]
requires = ["setuptools", "wheel", "mypy[mypyc]"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fast_fsm = ["py.typed"]

[tool.mypyc]
files = ["src/fast_fsm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-x",
    "-q",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
asyncio_mode = "auto"
log_level = "INFO"
log_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
